# osc-ccloud-placement-extended

./: README.md  setup.cfg  setup.py
osc_ccloud_placement_extended/: commands.py  plugin.py
