[metadata]
name = osc-ccloud-placement-extended
summary = OpenStackClient plugin for more Placement commands
description-file =
    README.md
author = Johannes Kulik
author-email = johannes.kulik@sap.com
home-page = https://github.com/sapcc/osc-ccloud-placement-extended
python-requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
packages =
    osc_ccloud_placement_extended

[entry_points]
openstack.cli.extension =
    ccloud_placement_extended = osc_ccloud_placement_extended.plugin

openstack.ccloud_placement_extended.v1 =
    resource_provider_trait_add = osc_ccloud_placement_extended.commands:AddTrait
    resource_provider_trait_remove = osc_ccloud_placement_extended.commands:RemoveTrait
